--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -5,8 +5,22 @@
 .nav-link{
    float: left;
 }
+.navbar{
+    padding-top: 0px;
+    padding-bottom: 0px;
 
-
+}
 .div {
     display: block;
+}
+.fluid{
+    padding-left: 0px;
+}
+.link{
+    color: black;
+    text-decoration: none;
+}
+
+.nav-link a:hover .nav-link a:focus{
+    color: #0000EE;
 }
