--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row top-nav">
-        <nav class="navbar navbar-light bg-light left float-right" style="display: block; padding-left: 0; margin-top: 10px;">
+        <nav class="navbar navbar-light bg-white left float-right" style="display: block; padding-left: 0;">
            <form class="container-fluid justify-content-start fluid">
             <img src="../../assets/img/Logo.png" class=" float-left  logo">
             <div class="dropdown ps-4">
@@ -13,6 +13,7 @@
                     <li><a class="dropdown-item">Multiple Rooms</a></li>
                 </ul>
             </div>
+                <a class="link offset-1" href="#">How it works</a>
            </form>
         </nav>   
     </div>    
