--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-<app-nav></app-nav>
+<!--whole-->
+<div class="container mt-4">
+<!--menu-->    
+    <div class="row vh-100">
+        <div class="col-2 bg-primary">
+            <app-menu></app-menu>
+        </div>
+<!--Nav bar-->        
+        <div class="col-10 p-0">
+            <div>
+                <app-nav></app-nav>
+            </div>
+<!--Content-->
+            <div class="bg-info h-100 mt-3">
+                <app-info></app-info>
+            </div>
+        </div>
+    </div>
+</div>
